 * [Jul/15/06] Fixed: Wrongly printing "loopnz" as "loopn" (Thanks to Sanjay Patel)
 	       Fixed: Wrongly decoding "out Ib, AL" ((Thanks to Sanjay Patel)
 * [Jun/8/06]  Missing instructions added. (As per AMD64 Manual Vol3 Rev 3.11 
               Dec 2005)
               Fixed minor decoder issues. (Thanks to Sanjay Patel)
               Fixed issues with input stream buffer. (Thanks to Sanjay Patel)
 * [May/18/06] Fixed issues with handling of 64-bit values. 
               Fixed bug in syntax generation for immediate operands in branch
               instructions.
               Fixed decoding of (G, W) operands.
 * [May/12/06] Added support for data types in MS VC++.
 * [May/11/06] Fixed portability issues concerning inp_uintXX functions in 
               input.c and 64-bit casting in syn-intel/syn-att.c (Thanks to 
               Sanjay Patel)