@@ -294,7 +294,7 @@ Report bugs to <bug-autoconf@gnu.org>."
 ac_cs_version="\
 udis86 config.status 1.0
 configured by ./configure, generated by GNU Autoconf 2.59,
-  with options \"'--prefix=/home/vthampi/software'\"
+  with options \" 'CFLAGS=-m32'\"
 
 Copyright (C) 2003 Free Software Foundation, Inc.
 This config.status script is free software; the Free Software Foundation
@@ -373,8 +373,8 @@ if $ac_cs_silent; then
 fi
 
 if $ac_cs_recheck; then
-  echo "running /bin/sh ./configure " '--prefix=/home/vthampi/software' $ac_configure_extra_args " --no-create --no-recursion" >&6
-  exec /bin/sh ./configure '--prefix=/home/vthampi/software' $ac_configure_extra_args --no-create --no-recursion
+  echo "running /bin/sh ./configure "  'CFLAGS=-m32' $ac_configure_extra_args " --no-create --no-recursion" >&6
+  exec /bin/sh ./configure  'CFLAGS=-m32' $ac_configure_extra_args --no-create --no-recursion
 fi
 
 for ac_config_target in $ac_config_targets
@@ -442,7 +442,7 @@ s,@PACKAGE_VERSION@,1.0,;t t
 s,@PACKAGE_STRING@,udis86 1.0,;t t
 s,@PACKAGE_BUGREPORT@,vivek@sig9.com,;t t
 s,@exec_prefix@,${prefix},;t t
-s,@prefix@,/home/vthampi/software,;t t
+s,@prefix@,/usr/local,;t t
 s,@program_transform_name@,s,x,x,,;t t
 s,@bindir@,${exec_prefix}/bin,;t t
 s,@sbindir@,${exec_prefix}/sbin,;t t
@@ -465,7 +465,7 @@ s,@ECHO_N@,-n,;t t
 s,@ECHO_T@,,;t t
 s,@LIBS@,,;t t
 s,@CC@,gcc,;t t
-s,@CFLAGS@,-g -O2,;t t
+s,@CFLAGS@,-m32,;t t
 s,@LDFLAGS@,,;t t
 s,@CPPFLAGS@,,;t t
 s,@ac_ct_CC@,gcc,;t t
