@@ -175,7 +175,7 @@ argument. The following is a list of all functions available.
 	</li>
 
 	<li>
-	<pre>void ud_set_input_buffered(ud_t* ud_obj, unsigned char* buffer, size_t size);</pre>
+	<pre>void ud_set_input_buffer(ud_t* ud_obj, unsigned char* buffer, size_t size);</pre>
 
 	This function sets the input source for the library to a buffer of fixed
 	size.
